--- a/ansible/drones.yml
+++ b/ansible/drones.yml
@@ -2,12 +2,38 @@
 - name: Pre-Setup
   hosts: drones
   remote_user: lis
+  become: yes # runs everything with sudo 
 
   tasks: 
+  - name: Ensure that the patched kernel exists
+    local_action: ansible.builtin.command 
   - name: Perform a safe upgrade # installs new packages if needed
     ansible.builtin.apt:
       upgrade: "safe"
   - name: Ensure apt packages are installed
     ansible.builtin.apt: 
-      name: python3-pip htop sysstat
+      name: 
+        - python3-pip 
+        - htop 
+        - sysstat
       state: latest
+  - name: Jetson Stats
+    ansible.builtin.pip:
+      name: 
+        - jetson-stats
+  - name: Ensure Jetson clocks service
+    ansible.builtin.template: 
+      src: templates/jetson_clocks.j2
+      dest: /etc/systemd/system/jetson_clocks.service
+
+  - name: Start and enable service
+    ansible.builtin.systemd:
+      name: jetson_clocks
+      state: started
+      enabled: true
+      daemon_reload: true
+  - name: Check if 
+
+
+  # - name: Set max power mode # must be last since it reboots the system.
+  #   ansible.builtin.command: nvpmodel -m 0 --force
