--- a/ansible/drones.yml
+++ b/ansible/drones.yml
@@ -127,3 +127,19 @@
             # Virtual 1920 1080
             EndSubSection
             EndSection
+  - name: Setup ROS
+    block: 
+      - name: Ensure universe is present
+        ansible.builtin.lineinfile:
+          path: /etc/apt/sources.list
+          line: "deb http://ports.ubuntu.com/ubuntu-ports/ jammy universe"
+      - name: Ensure universe updates is present
+        ansible.builtin.lineinfile:
+          path: /etc/apt/sources.list
+          line: "deb http://ports.ubuntu.com/ubuntu-ports/ jammy-updates universe"
+      - name: Ensure software-properties-common is installed
+        ansible.builtin.apt: 
+          name: software-properties-common
+        
+
+        
