--- a/ansible/drones.yml
+++ b/ansible/drones.yml
@@ -272,6 +272,9 @@
         ansible.builtin.apt:
           name: modemmanager
           state: absent
+      - name: Install mavsdk
+        ansible.builtin.pip:
+          name: mavsdk
 
         
 
