Add more nxt and rc setup

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ nav:
   - Software Setup: software-setup.md
   - Image Creation Steps: image-creation.md
   - Flight Controller Setup: nxt-setup.md
+  - Remote Controller Setup: remote-control-setup.md
   - Common Software Tasks: software-common-tasks.md
 theme: readthedocs
 markdown_extensions:
