add json dependency

--- a/bounds_checker_ros2/package.xml
+++ b/bounds_checker_ros2/package.xml
@@ -9,6 +9,7 @@
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>nlohmann-json-dev</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
